[tool.poetry]
name = "diamond-miner"
version = "1.0.5"
description = "High-speed, Internet-scale, load-balanced paths discovery."
license = "MIT"
authors = [
    "Kevin Vermeulen <kevin.vermeulen@columbia.edu>",
    "Matthieu Gouel <matthieu.gouel@lip6.fr>",
    "Maxime Mouchet <maxime.mouchet@lip6.fr>"
]
readme = "README.md"
homepage = "https://github.com/dioptra-io/diamond-miner"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet",
    "Typing :: Typed"
]

[tool.poetry.build]
# https://github.com/python-poetry/poetry/issues/7470
script = "build_ext.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pych-client = "^0.3.1"
pygfc = "^1.0.5"
zstandard = ">=0.15.2,<0.19.0"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
coverage = {extras = ["toml"], version = "^7.1.0"}
Cython = "^0.29.33"
hypothesis = "^6.68.2"
mkdocs-bibtex = "^2.8.13"
mkdocs-material = "^9.0.13"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
addopts = "--capture=no --doctest-modules --ignore=examples --log-cli-level=info --strict-markers --verbosity=2"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:$",
    "if __name__ == \"__main__\":$",
    "pass$",
    "\\s\\.\\.\\.$",
    "raise NotImplementedError$"
]

[tool.cibuildwheel]
# Cleanup build/ directory before each build to avoid an issue where
# the compiled modules are not built for the correct Python version.
before-build = "rm -rf build"
# Keep emulated aarch64 build times manageable...
skip = ["*-musllinux_*"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["universal2"]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=40.6.0", "Cython>=0.29.0"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.10"
