[tool.poetry]
name = "diamond-miner"
version = "1.1.3"
description = "High-speed, Internet-scale, load-balanced paths discovery."
license = "MIT"
authors = [
    "Kevin Vermeulen <kevin.vermeulen@columbia.edu>",
    "Matthieu Gouel <matthieu.gouel@lip6.fr>",
    "Maxime Mouchet <maxime.mouchet@lip6.fr>"
]
readme = "README.md"
homepage = "https://github.com/dioptra-io/diamond-miner"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pych-client = "^0.4.1"
pygfc = "^1.0.5"
zstandard = "^0.21.0"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
coverage = {extras = ["toml"], version = "^7.3.2"}
griffe = "^0.48.0"
hypothesis = "^6.88.1"
mkdocs = "^1.6.0"
mkdocs-autorefs = "^1.2.0"
mkdocs-bibtex = "^2.11.0"
mkdocs-material = "^9.4.7"
mkdocstrings = {extras = ["python"], version = ">=0.26.1"}
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = "--capture=no --doctest-modules --ignore=examples --log-cli-level=info --strict-markers --verbosity=2"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:$",
    "if __name__ == \"__main__\":$",
    "pass$",
    "\\s\\.\\.\\.$",
    "raise NotImplementedError$"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
